# smolvlm-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: config.py  main.py
app/models/: state.py
app/schemas/: responses.py
app/services/: huggingface.py  model.py
app/utils/: callbacks.py
