[project]
name = "smolvlm-api"
version = "0.1.0"
description = "A FastAPI application for running SmolVLM-Instruct vision-language model with GPU support."
dependencies = [
    "fastapi",
    "flash-attn>=2.7.2",
    "pillow",
    "python-multipart",
    "typing",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[tool.ruff.lint]
select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]  # Specify the package directory

[tool.hatch.build]
only-packages = true